--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -1,26 +1,7 @@
-@import "tailwindcss";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* :root { */
-/*     --background: #ffffff; */
-/*     --foreground: #171717; */
-/* } */
-/**/
-/* @theme inline { */
-/*     --color-background: var(--background); */
-/*     --color-foreground: var(--foreground); */
-/*     --font-sans: var(--font-geist-sans); */
-/*     --font-mono: var(--font-geist-mono); */
-/* } */
-/**/
-/* @media (prefers-color-scheme: dark) { */
-/*     :root { */
-/*         --background: #0a0a0a; */
-/*         --foreground: #ededed; */
-/*     } */
-/* } */
+:root {
+    --background: #ffffff;
+    --foreground: #171717;
+}
 
 body {
     background: var(--background);
@@ -28,3 +9,65 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.register-field {
+    padding: 5px;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f4f4f4;
+}
+
+.basic-form {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 300px;
+    width: 100%;
+    max-width: 400px;
+}
+
+.basic-form label {
+    font-weight: bold;
+}
+
+.basic-form input {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.basic-form button {
+    background: #007bff;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.basic-form button:hover {
+    background: #0056b3;
+}
+
+.side-by-side {
+    display: flex;
+    gap: 10px;
+}
+
+.side-by-side label {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.side-by-side input {
+    margin-top: 6px;
+}
